--- a/HTP1-TempHumEsp32/HTP1-TempHumEsp32/app.config
+++ b/HTP1-TempHumEsp32/HTP1-TempHumEsp32/app.config
@@ -4,19 +4,27 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="mscorlib" publicKeyToken="c07d481e9758c731" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.10.5.0" newVersion="1.10.5.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.10.5.4" newVersion="1.10.5.4" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Math" publicKeyToken="c07d481e9758c731" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.4.1.0" newVersion="1.4.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.4.1.3" newVersion="1.4.1.3" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="nanoFramework.Runtime.Events" publicKeyToken="c07d481e9758c731" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.9.1.0" newVersion="1.9.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.9.1.3" newVersion="1.9.1.3" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="nanoFramework.System.Collections" publicKeyToken="c07d481e9758c731" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.2.0.0" newVersion="1.2.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.0.3" newVersion="1.2.0.3" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net" publicKeyToken="c07d481e9758c731" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.7.0.3" newVersion="1.7.0.3" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="nanoFramework.System.Text" publicKeyToken="c07d481e9758c731" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.1.1.3" newVersion="1.1.1.3" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
