--- a/HTP1-TempHumEsp32/HTP1-TempHumEsp32/packages.config
+++ b/HTP1-TempHumEsp32/HTP1-TempHumEsp32/packages.config
@@ -1,17 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DevBot9.NanoFramework.Homie" version="0.9.0" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.CoreLibrary" version="1.10.5-preview.18" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.Graphics" version="1.0.0-preview.68" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.Hardware.Esp32" version="1.3.3-preview.22" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.M2Mqtt" version="5.0.0-preview.2" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.ResourceManager" version="1.1.2-preview.42" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.Runtime.Events" version="1.9.1-preview.7" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.Runtime.Native" version="1.5.1-preview.46" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.System.Collections" version="1.2.0-preview.70" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.System.Math" version="1.4.1-preview.10" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.System.Net" version="1.7.0-preview.4" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.System.Text" version="1.1.1-preview.64" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.System.Text.RegularExpressions" version="1.0.0-preview.28" targetFramework="netnanoframework10" />
-  <package id="nanoFramework.Windows.Devices.I2c" version="1.4.1-preview.46" targetFramework="netnanoframework10" />
+  <package id="DevBot9.NanoFramework.Homie" version="0.10.0" targetFramework="netnanoframework10" />
+  <package id="DevBot9.NanoFramework.Homie.Utilities" version="0.10.0" targetFramework="netnanoframework10" />
+  <package id="DevBot9.NanoFramework.M2Mqtt" version="4.6.1" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.CoreLibrary" version="1.10.5" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.Graphics" version="1.0.0" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.Hardware.Esp32" version="1.3.3" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.M2Mqtt" version="4.6.1" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.ResourceManager" version="1.1.2" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.Runtime.Events" version="1.9.1" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.Runtime.Native" version="1.5.1" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.System.Collections" version="1.2.0" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.System.Math" version="1.4.1" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.System.Net" version="1.7.0" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.System.Text" version="1.1.1" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.System.Text.RegularExpressions" version="1.0.3" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.Windows.Devices.I2c" version="1.4.1" targetFramework="netnanoframework10" />
+  <package id="nanoFramework.Windows.Devices.Wifi" version="1.3.2" targetFramework="netnanoframework10" />
 </packages>
